# fgvad

./: .gitignore  Cargo.toml  Fgvad.podspec  Package.swift  README.en.md  README.md  README_CN.md  build.rs  cbindgen.toml  jitpack.yml
Sources/Fgvad/: FgVadAnalyzer.swift
android/: build.gradle.kts  settings.gradle.kts
android/fgvad/: build.gradle.kts
android/fgvad/src/main/java/io/fengur/fgvad/: FgVad.kt  ResultType.kt  State.kt
docs/superpowers/plans/: 2026-05-21-android-demo.md  2026-05-25-c-cli-demo.md  2026-05-25-fgvad-v0.1-public-release.md  2026-05-25-fgvad-v0.1-swift-package.md  2026-05-26-fgvad-v0.2-android-aar.md
docs/superpowers/specs/: 2026-05-21-android-demo-design.md  2026-05-21-audio-picker-v2-design.md
examples/android/: README.en.md  README.md  README_CN.md
examples/android/FgVadDemo/: settings.gradle.kts
examples/android/FgVadDemo/app/: build.gradle.kts
examples/android/FgVadDemo/app/src/main/: AndroidManifest.xml
examples/android/FgVadDemo/app/src/main/java/io/fengur/fgvad/: EndReason.kt  Event.kt  FgVad.kt  Result.kt
examples/android/FgVadDemo/app/src/main/java/io/fengur/fgvaddemo/: AudioPickerAdapter.kt  AudioPickerSheet.kt  AudioRecorder.kt  DemoLogger.kt  MainActivity.kt  Sentence.kt  SentenceAdapter.kt  SentencePlayer.kt  WavReader.kt  WavWriter.kt
examples/android/FgVadDemo/app/src/main/res/layout/: activity_main.xml  row_param.xml  row_picker_item.xml  row_picker_section_header.xml  row_sentence.xml
examples/android/FgVadDemo/app/src/main/res/values/: strings.xml
examples/android/fgvad-jni/: Cargo.toml
examples/android/fgvad-jni/src/: lib.rs
examples/c/: CMakeLists.txt  README.en.md  README.md  README_CN.md
examples/c/src/: event_fmt.c  event_fmt.h  fgvad_cli.c  wav_io.c  wav_io.h
examples/c/tests/: test_wav_io.c
examples/ios/: README.en.md  README.md  README_CN.md
examples/ios/FgVadDemo/: project.yml
examples/ios/FgVadDemo/FgVadDemo/: AppDelegate.swift  AudioPickerViewController.swift  DemoLogger.swift  FGAudioController.h  FGAudioController.m  FGIOSRecorder.h  FGIOSRecorder.m  FgVadDemo-Bridging-Header.h  Info.plist  ViewController.swift  WavWriter.swift
examples/ios/FgVadDemo/FgVadDemo.xcodeproj/: project.pbxproj
examples/ios/FgVadDemo/FgVadDemo.xcodeproj/xcshareddata/xcschemes/: FgVadDemo.xcscheme
examples/macos/: FgVadDemo-Bridging-Header.h  README.en.md  README.md  README_CN.md  project.yml
examples/macos/FgVadDemo/: AppDelegate.swift  AudioPickerWindowController.swift  DemoLog.swift  FgVadAnalyzer.swift  Info.plist  MainWindowController.swift  Recorder.swift  WavIO.swift  main.swift
examples/macos/FgVadDemo.xcodeproj/: project.pbxproj
examples/macos/FgVadDemo/Assets.xcassets/AppIcon.appiconset/: Contents.json
include/: fgvad.h  module.modulemap
scripts/: build-android.sh  build-ios.sh  build-macos-universal.sh  build-xcframework.sh  release.sh
src/: ffi.rs  lib.rs  state_machine.rs  sys.rs  vad.rs
test-data/: README.md
test-data/long/: README.md
test-data/short/: README.md
tests/: long_mode.rs  long_mode_yixi.rs  real_audio.rs  short_mode_cases.rs
tests/common/: mod.rs
tests/fixtures/: README.md
